--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -46,7 +46,7 @@
     <img src="../static/img/basketbanner.jpg" >
     <div class="top_word">
       <div class="Top_word">河南大学智慧篮球竞赛</div>
-      <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+      <div class="Top_word2">时间：2023年11月27日—2024年1月7日</div>
       <div class="Top_word3">地点：河南大学(金明校区)</div>
     </div>
   </div>
