--- a/src/main/resources/templates/apply/index.html
+++ b/src/main/resources/templates/apply/index.html
@@ -32,7 +32,7 @@
     </div>
     </transition>
     <div class="nav-box">
-        <div class="index-title">智慧体育竞赛</div>
+        <div class="index-title">智慧篮球竞赛</div>
         <el-menu
                 :default-active="defaultActive"
                 class="el-menu-vertical-demo"
@@ -67,13 +67,13 @@
     </div>
     <div class="content-box" :span="21">
         <div class="content-top">
+            <div @click="backWebFistPage" style="float:left;cursor:pointer;height: 100%;line-height: 60px"><img src="/static/img/backwebfistpage.png" style="float: left;height: 50%;margin-top: 15px;margin-left: 20px;margin-right: 5px">返回网站首页</div>
             <el-menu :default-active="1" class="el-menu-demo" mode="horizontal"  @select="handleSelect">
                 <el-submenu index="1">
                     <template slot="title">      <span th:text="${nickname}"></span></template>
                     <el-menu-item index="1-1">退出</el-menu-item>
                 </el-submenu>
             </el-menu>
-
         </div>
         <div class="content-bottom">
                     <component :is="ComponentValue.content" :objId="ComponentValue.name"></component>
@@ -139,6 +139,9 @@
                             }
                         });
                     }
+                },
+                backWebFistPage(){
+                    location.href="/";
                 }
             }
         });
